--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,8 @@ wheels/
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
-
+*.mwb
+*.bak
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
