--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
+    "@types/antd": "^1.0.0",
+    "@types/gsap": "^1.20.2",
     "@types/styled-components": "^5.1.4",
     "@zeit/next-css": "^1.0.1",
+    "antd": "^4.7.3",
     "axios": "^0.21.0",
     "dotenv-webpack": "^5.0.0",
+    "gsap": "^3.5.1",
     "next": "10.0.0",
     "next-redux-wrapper": "^6.0.2",
     "react": "17.0.1",
@@ -28,6 +33,7 @@
     "@types/react": "^16.9.55",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
+    "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^7.12.1",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.15.0",
