--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "antd": "^4.7.3",
     "axios": "^0.21.0",
     "dotenv-webpack": "^5.0.0",
+    "formik": "^2.2.1",
     "gsap": "^3.5.1",
     "next": "10.0.0",
     "next-redux-wrapper": "^6.0.2",
