--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,22 +12,24 @@
     "@types/antd": "^1.0.0",
     "@types/gsap": "^1.20.2",
     "@types/styled-components": "^5.1.4",
+    "@types/yup": "^0.29.9",
     "@zeit/next-css": "^1.0.1",
     "antd": "^4.7.3",
     "axios": "^0.21.0",
     "dotenv-webpack": "^5.0.0",
     "formik": "^2.2.1",
     "gsap": "^3.5.1",
-    "next": "10.0.0",
+    "next": "^10.0.0",
     "next-redux-wrapper": "^6.0.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
     "styled-normalize": "^8.0.7",
-    "swr": "^0.3.7"
+    "swr": "^0.3.7",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
