--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "dotenv-webpack": "^5.0.0",
     "formik": "^2.2.1",
     "gsap": "^3.5.1",
+    "js-cookie": "^2.2.1",
     "next": "^10.0.0",
+    "next-cookies": "^2.0.3",
     "next-redux-wrapper": "^6.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
