--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@ant-design/icons": "^4.2.2",
     "@types/antd": "^1.0.0",
     "@types/gsap": "^1.20.2",
+    "@types/js-cookie": "^2.2.6",
     "@types/styled-components": "^5.1.4",
     "@types/yup": "^0.29.9",
     "@zeit/next-css": "^1.0.1",
