--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "@types/antd": "^1.0.0",
     "@types/gsap": "^1.20.2",
     "@types/js-cookie": "^2.2.6",
+    "@types/nprogress": "^0.2.0",
+    "@types/react-redux": "^7.1.11",
     "@types/styled-components": "^5.1.4",
     "@types/yup": "^0.29.9",
     "@zeit/next-css": "^1.0.1",
@@ -24,6 +26,7 @@
     "next": "^10.0.0",
     "next-cookies": "^2.0.3",
     "next-redux-wrapper": "^6.0.2",
+    "nprogress": "^0.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
