--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "next-cookies": "^2.0.3",
     "next-redux-wrapper": "^6.0.2",
     "nprogress": "^0.2.0",
+    "pusher": "^4.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
