--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start"
   },
@@ -19,6 +19,7 @@
     "@zeit/next-css": "^1.0.1",
     "antd": "^4.7.3",
     "axios": "^0.21.0",
+    "cross-env": "^7.0.2",
     "dotenv-webpack": "^5.0.0",
     "formik": "^2.2.1",
     "gsap": "^3.5.1",
