--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/gsap": "^1.20.2",
     "@types/js-cookie": "^2.2.6",
     "@types/nprogress": "^0.2.0",
+    "@types/pusher-js": "^4.2.2",
     "@types/react-redux": "^7.1.11",
     "@types/styled-components": "^5.1.4",
     "@types/yup": "^0.29.9",
@@ -29,6 +30,7 @@
     "next-redux-wrapper": "^6.0.2",
     "nprogress": "^0.2.0",
     "pusher": "^4.0.1",
+    "pusher-js": "^7.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
